examples/test/testpolicy9452.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9452
  namespace: namespace238
spec:
  podSelector:
    matchLabels:
      key42: value16
      key43: value12
      key14: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value31
          key16: value21
          key26: value49
      podSelector:
        matchLabels:
          key45: value40
          key39: value30
          key42: value48
